--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 My answers to the Stanford CS106L C++ Course Assignments and Practice Problems
+
+# GraphViz #
+![63binary-tree](/GraphViz/images/5grid_01.png)
