--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 My answers to the Stanford CS106L C++ Course Assignments and Practice Problems
 
 # GraphViz #
-![63binary-tree](/GraphViz/images/5grid_01.png)
+![63binary-tree](https://github.com/Zainny/cs106l/blob/master/GraphViz/images/5grid_01.png)
